Tried to fix Giudici on Mobile

--- a/app/styles/giudici.css
+++ b/app/styles/giudici.css
@@ -18,8 +18,26 @@
     width: 40%;
 }
 
-.rightimage {
-    grid-area: 1 / 3 / span 1 /span 1;
+@media screen and (max-width: 500px){
+    #image {
+        padding-left: 20px;
+        max-width: 250px;
+        max-height: 175px;
+    }
+    #header {
+        font-family: Oswald, sans-serif;
+        font-size: 15px;
+        font-weight: bold;
+    }
+    #text {
+        font-family: Oswald, sans-serif;
+        font-size: 10px;
+    }
+    #title {
+        font-family: Oswald, sans-serif;
+        font-size: 20px;
+        font-weight: bolder;
+    }
 }
 
 .flexdiv {
@@ -32,6 +50,10 @@
     grid-area: 1 / 2 / span 1 / span 1;
     padding-left: 30px;
     padding-bottom: 30px;
+}
+
+.rightimage {
+    grid-area: 1 / 3 / span 1 /span 1;
 }
 
 #title {
